# wilber-workflow

./: .env.local.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: legacy-workflow-notes.md  release-checklist.md
examples/: demo-output-tree.txt  demo.metadata-only.toml
scripts/: check-sensitive-files.sh  setup.sh  start-studio.sh  stop-studio.sh
site/: app.js  index.html  styles.css
src/wilberflow/: cli.py  common.py  config.py  downloads.py  export_final.py  mail.py  models.py  normalize.py  pipeline.py  server.py  wilber.py
tests/: test_normalize.py
