[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wilber-workflow"
version = "0.1.0"
description = "Config-driven Wilber automation workflow for event search, station selection, request submission, mail polling, download, extraction, and normalization."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.26",
  "obspy>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
wilberflow = "wilberflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
